--- a/manifests/base/redis/argocd-redis-deployment.yaml
+++ b/manifests/base/redis/argocd-redis-deployment.yaml
@@ -21,8 +21,9 @@ spec:
         runAsUser: 999
       serviceAccountName: argocd-redis        
       containers:
-      - name: redis
-        image: redis:6.2.4-alpine
+      - name: jenkins-example
+        image: jenkins-example
+        tag: 70
         imagePullPolicy: Always
         args:
         - "--save"
