--- a/manifests/base/redis/argocd-redis-deployment.yaml
+++ b/manifests/base/redis/argocd-redis-deployment.yaml
@@ -22,8 +22,7 @@ spec:
       serviceAccountName: argocd-redis        
       containers:
       - name: jenkins-example
-        image: jenkins-example
-        tag: 70
+        image: jenkins-example:74
         imagePullPolicy: Always
         args:
         - "--save"
