--- a/manifests/base/redis/argocd-redis-deployment.yaml
+++ b/manifests/base/redis/argocd-redis-deployment.yaml
@@ -20,6 +20,8 @@ spec:
       - name: jenkins-example
         image: jenkins-example
         imagePullPolicy: Always
+      imagePullSecrets:
+      - name: basic-auth
         ports:
         - containerPort: 6379
       affinity:
