--- a/manifests/base/redis/argocd-redis-deployment.yaml
+++ b/manifests/base/redis/argocd-redis-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:   
       containers:
       - name: jenkins-example
-        image: 	v2/jenkins-example/manifests/76
+        image: 	argocd-repo/image:76
         imagePullPolicy: Always
         ports:
         - containerPort: 6379
