--- a/manifests/base/redis/argocd-redis-deployment.yaml
+++ b/manifests/base/redis/argocd-redis-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: jenkins-example
-        image: '55'
+        image: jenkins-example:44
         imagePullPolicy: Always
         ports:
         - containerPort: 6379
