--- a/manifests/base/redis/argocd-redis-deployment.yaml
+++ b/manifests/base/redis/argocd-redis-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: jenkins-example
-        image: 54.227.178.228:32000/jenkins-example:latest
+        image: jenkins-example:92
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
