--- a/manifests/base/redis/argocd-redis-deployment.yaml
+++ b/manifests/base/redis/argocd-redis-deployment.yaml
@@ -18,10 +18,10 @@ spec:
     spec:
       containers:
       - name: jenkins-example
-        image: 3.89.70.197:5000/jenkins-example:105
+        image: 3.89.70.197:32002/jenkins-example:latest 
         imagePullPolicy: Always
         ports:
-        - containerPort: 6379
+        - containerPort: 5000
       imagePullSecrets:
       - name: basic-auth2
       affinity:
